# amcli

./: .gitignore  AGENTS.md  AI_AGENT_PREP.md  AI_READY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LYRICS.md  Makefile  PROJECT_SPEC.md  README.md  README.zh-CN.md  RELEASE.md  RELEASE_COMPLETION_STEPS.md  RELEASE_STATUS.txt  RUST_CONVERSION_COMPLETE.md  SETUP.md  TWITTER_ANNOUNCEMENT.md  patch.diff  patch_comment.patch  plan.md
.brv/: config.json
.brv/context-tree/: .snapshot.json
.brv/sessions/: active.json  session-2026-02-01T09-17-54-agent-se.json
.github/workflows/: backfill-release-asset.yml  ci.yml  pr-conflict-scan.yml  pr-validate-merge.yml  release.yml
.jules/: bolt.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-draw-function-decomposition/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-proportional-layout-spacing-system/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-section-level-polish/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/quick/260703-h4n-fix-pre-release-review-findings-in-lyric/: 260703-h4n-PLAN.md  260703-h4n-SUMMARY.md  recovered-matching.rs
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/plans/: intel-mac-support.md
configs/: config.example.toml
homebrew/: README.md  amcli.rb
scripts/: pr-triage.sh  verify.sh
scripts/applescript/: get_current_track.scpt  playback_control.scpt
src/: main.rs  terminal_title.rs
src/artwork/: cache.rs  converter.rs  mod.rs
src/config/: mod.rs
src/lyrics/: local.rs  lrclib.rs  matching.rs  mod.rs  netease.rs  netease_tests.rs  parser.rs  provider.rs
src/player/: apple_music.rs  apple_music.rs.orig  mod.rs
src/ui/: mod.rs  mod.rs.orig  settings.rs
