[package]
name = "amcli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Apple Music Command Line Interface - A powerful TUI for controlling Apple Music"
license = "MIT"
repository = "https://github.com/yourusername/amcli"
keywords = ["tui", "music", "apple-music", "terminal", "player"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
# TUI Framework
ratatui = "0.30"
crossterm = "0.28"

# Async Runtime

tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Image Processing for Album Art
image = "0.25"
rgb = "0.8"

# Configuration Management
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
sha2 = "0.10"
urlencoding = "2.1"
config = "0.13"
clap = { version = "4.4", features = ["derive"] }

# HTTP Client for Lyrics APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
unicode-width = "0.1"
lazy_static = "1.4"
regex = "1.10"
dirs = "5.0"
lru = "0.12"
ratatui-image = { version = "10.0", default-features = false }
throbber-widgets-tui = "0.10"
tui-big-text = "0.8"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "amcli"
path = "src/main.rs"
